	* feature: move guesser
	* bugfix: update theme when pieces are changed
	* bugfix: fix some drag&drop problems
	* bugfix: segfault when truncating moves from empty game

Mon 23 Feb 2007 18:59:47 CET	Version 0.3

	* feature: display ECO information
	* feature: move pieces by drag&drop
	* feature: remove moves/variations and truncate moves
	* feature: display side to move
	* feature: position search
	* feature: internal support for editable PGN databases (no GUI yet!)
	* feature: export games in filter/all games to PGN
	* feature: small sample player database (look for Adams)
	* bugfix: fix incorrect SAN representation of en-passant moves
	* bugfix: correctly calculate game length displayed in GameInfo
	* bugfix: display empty game
	* bugfix: more robust PGN parsing
	* bugfix: Sun-Solaris compilation (patch by Atul)
	* bugfix: some improvements to Windows installer
	* bugfix: more usual PGN format (space after move number etc.)

Thu 28 Feb 2007 00:59:47 CET	Version 0.2

	* feature: highlight and display current move
	* feature: add variations
	* feature: support promotion when entering moves
	* feature: redesign Setup Position to improve usability
	* feature: check board validity in Setup position dialog
	* bugfix: correctly display move numbers for non-standard games
	* bugfix: keep move number and side to move when setting position
	* bugfix: copy/paste move number to/from FEN
	* bugfix: accept non-standard castling (0-0 instead of O-O)
	* bugfix: correctly draw large boards in unscaled pixmap mode
	* bugfix: insert all pieces in given color in Setup Position
	* bugfix: fix segfault when removing piece from empty square
	* bugfix: correctly finding installed data path on Debian.
	* change: clean configuration file format

Mon 19 Feb 2007 00:59:47 CET	Version 0.1
